2007-07-11 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/debug-manager/debugger.c,
	plugins/debug-manager/threads.c,
	plugins/debug-manager/plugin.c,
	plugins/debug-manager/registers.c,
	plugins/debug-manager/locals.c,
	plugins/debug-manager/stack_trace.c,
	plugins/gdb/plugin.c,
	plugins/gdb/debugger.c,
	plugins/gdb/debugger.h,
	libanjuta/interfaces/libanjuta.idl:
	Rename change-location to program-moved
	Store thread id as gint instead of guint
	Do not display registers list if not available
	Add intermediate debugger states if missing

2007-07-11  Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin
	.glade:
	Reverted unnecessary changes (#455819)

2007-07-10  Johannes Schmid <jhs@gnome.org>

	* plugins/glade/plugin.c:
	Fixed glade plugin with glade 3.2 and another crasher

2007-07-09  Johannes Schmid <jhs@gnome.org>

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin
	.glade:
	* plugins/debug-manager/breakpoints.c:
	(breakpoint_item_update_in_ui),
	(breakpoints_dbase_edit_breakpoint),
	(on_toggle_breakpoint_activate):
	* plugins/debug-manager/plugin.c:
	(on_run_to_cursor_action_activate):
	* plugins/document-manager/action-callbacks.c:
	(on_editor_command_cut_activate),
	(on_editor_command_copy_activate),
	(on_editor_command_paste_activate),
	(on_editor_command_clear_activate):
	* plugins/document-manager/anjuta-docman.c:
	(on_text_editor_notebook_close_page), (anjuta_docman_add_editor),
	(anjuta_docman_add_document), (anjuta_docman_set_current_document),
	(anjuta_docman_goto_file_line_mark),
	(anjuta_docman_find_editor_with_path),
	(anjuta_docman_get_all_editors):
	* plugins/document-manager/anjuta-docman.h:
	* plugins/document-manager/plugin.c:
	(update_editor_ui_interface_items), (on_editor_update_ui),
	(on_editor_changed), (on_session_save), (on_docman_auto_save),
	(ianjuta_docman_add_document), (ianjuta_docman_remove_document),